--- a/src/index.css
+++ b/src/index.css
@@ -18,33 +18,6 @@
   scroll-behavior: smooth;
 }
 
- 
-
-  .black {
-      float: left;
-      width: 84.75px;
-      height: 80px;
-      background-color: #0e26adb9;
-        font-size:50px;
-      text-align:center;
-      display: table-cell;
-      vertical-align:middle;
-  }
-  .white {
-      float: left;
-      width: 84.75px;
-      height: 80px;
-      background-color: #ffffff;
-      font-size:50px;
-      text-align:center;
-      display: table-cell;
-      vertical-align:middle;
-  } 
-
-  .white:last-child{
-
-  }
-
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
@@ -107,30 +80,34 @@
   box-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
+
 .sidebar {
-  -webkit-animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: slide-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  -webkit-animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: slide-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-@-webkit-keyframes slide-top {
+
+
+
+@-webkit-keyframes slide-left {
   0% {
-    -webkit-transform: translateY(100px);
-    transform: translateY(100px);
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
   }
   100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
-@keyframes slide-top {
+@keyframes slide-left {
   0% {
-    -webkit-transform: translateY(100px);
-    transform: translateY(100px);
+    -webkit-transform: translateX(100px);
+    transform: translateX(100px);
   }
   100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
 }
 
