--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
 @tailwind components;
 @tailwind utilities;
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 :root {
   --black-gradient: linear-gradient(
     144.39deg,
@@ -297,7 +307,7 @@
   display: inline-block;
   width: 13px;
   height: 13px;
-  background-color: #682fc4;
+  background-color: #2fbfc4;
   border-radius: 50%;
  
   
@@ -315,4 +325,36 @@
 .gray_text{
   color: rgba(255, 255, 255, 0.55);
 }
+
+.contact_box{
+  display: grid;
+  grid-template-columns: 45% 45%;
+}
+
+textarea {
+  font-family: "Poppins", sans-serif;
+}
+
+.contact_input{
+  padding: 0.6rem 1.5rem;
+  margin: 0.6rem 0.4rem;
+  border: none;
+  outline: none;
+  background: #cfcdcd;
+  border-radius: 2rem;
+  font-weight: 600;
+}
+
+.contact_textArea{
+  padding: 0.6rem 1.5rem;
+  margin: 0.6rem 0.7rem;
+  border: none;
+  outline: none;
+  background: #cfcdcd;
+  border-radius: 2rem;
+  font-weight: 600;
+  font-size: 1rem;
+
+}
+
 
