--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -559,6 +560,43 @@ textarea {
   color: black;
 
 }
+
+
+.submit_contact_btn{
+   width: 150px;  
+   height: 40px;  
+   bottom: -8%;  
+   background: linear-gradient(to right, #0b4e9b, #09bbe7);  
+   color: white;  
+   border: none;  
+   border-radius: 20px;
+   cursor: pointer;  
+   font-size: 1.3em;  
+   box-shadow: 2px 10px 50px #192ac58e,2px 0px 10px #07d4db98 ;  
+   justify-content: center;
+   align-items: center;
+   margin-left: auto;
+   margin-right: auto;
+   margin-top: 10px;
+
+}
+
+.submit_contact_btn:hover{
+  opacity: 0.8;
+}
+
+.clock_heading {
+    color: #16cc86;
+    font-size: 0.8em;
+    font-weight: 500;
+    font-family: 'Orbitron', sans-serif;
+    letter-spacing: 7px;
+    text-align: right; 
+    position: absolute;
+    right: 0;
+    
+}
+
 
 
 
